// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/viewHeaderActionsMenu return menu with Share Boards 1`] = `
<div>
  <div
    class="ModalWrapper"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <div
        class="Button IconButton"
        role="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </div>
      <div
        class="Menu noselect bottom"
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              aria-label="Export to CSV"
              class="MenuOption TextOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Export to CSV
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Export board archive"
              class="MenuOption TextOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Export board archive
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Share board"
              class="MenuOption TextOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Share board
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Cancel
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/viewHeaderActionsMenu return menu without Share Boards 1`] = `
<div>
  <div
    class="ModalWrapper"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <div
        class="Button IconButton"
        role="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </div>
      <div
        class="Menu noselect bottom"
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              aria-label="Export to CSV"
              class="MenuOption TextOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Export to CSV
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Export board archive"
              class="MenuOption TextOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Export board archive
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Cancel
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
